--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="inlämningar">
-        <a href="#">Inlämning 1</a>
+        <a href="projekt1/projekt.html">projekt1</a>
         <a href="#">Inlämning 2</a>
         <a href="#">Inlämning 3</a>
         <a href="#">Inlämning 4</a>
