--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="inlämningar">
         <a href="projekt1/projekt.html">projekt1</a>
-        <a href="#">Inlämning 2</a>
+        <a href="https://abdulrahman351.wordpress.com/8-2/#like-8">Inlämning 2</a>
         <a href="#">Inlämning 3</a>
         <a href="#">Inlämning 4</a>
         <a href="#">Inlämning 5</a>
@@ -17,4 +17,3 @@
     </div>
 </body>
 </html>
-https://abdulrahman351.wordpress.com/wp-admin/post.php?post=8&action=edithttps://abdulrahman351.wordpress.com/wp-admin/post.php?post=8&action=edit
