--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="inlämningar">
         <a href="projekt1/projekt.html">projekt1</a>
-        <a href="https://abdulrahman351.wordpress.com/8-2/#like-8">wordpress2</a>
-        <a href="https://www.google.com//">Inlämning 3</a>
+        <a href="https://abdulrahman351.wordpress.com/8-2/#like-8">wordpress</a>
+        <a href="#">Inlämning 3</a>
         <a href="#">Inlämning 4</a>
         <a href="#">Inlämning 5</a>
         <a href="#">Inlämning 6</a>
